# py-yaml-to-object

./: LICENSE  README.md  pyproject.toml
src/: dict_to_obj.py
tests/: test_dict_to_obj.py  test_yaml_to_dict.py  test_yaml_to_obj.py
tests/test_files/: example.yaml
